// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generate (--rule-doc-notices) > for md files > basic > shows description before other notices when using default notice ordering 1`] = `
"# test/no-foo

📝 Description for no-foo.

❌ This rule is deprecated.

🔧💡 This rule is automatically fixable by the [\`--fix\` CLI option](https://eslint.org/docs/latest/user-guide/command-line-interface#--fix) and manually fixable by [editor suggestions](https://eslint.org/docs/latest/use/core-concepts#rule-suggestions).

<!-- end auto-generated rule header -->
"
`;

exports[`generate (--rule-doc-notices) > for md files > basic > shows the right rule doc notices 1`] = `
"## Rules
<!-- begin auto-generated rules list -->

🔧 Automatically fixable by the [\`--fix\` CLI option](https://eslint.org/docs/user-guide/command-line-interface#--fix).\\
💡 Manually fixable by [editor suggestions](https://eslint.org/docs/latest/use/core-concepts#rule-suggestions).\\
❌ Deprecated.

| Name                           | Description             | 🔧 | 💡 | ❌  |
| :----------------------------- | :---------------------- | :- | :- | :- |
| [no-foo](docs/rules/no-foo.md) | Description for no-foo. | 🔧 | 💡 | ❌  |

<!-- end auto-generated rules list -->
"
`;

exports[`generate (--rule-doc-notices) > for md files > basic > shows the right rule doc notices 2`] = `
"# test/no-foo

💡 This rule is manually fixable by [editor suggestions](https://eslint.org/docs/latest/use/core-concepts#rule-suggestions).

🔧 This rule is automatically fixable by the [\`--fix\` CLI option](https://eslint.org/docs/latest/user-guide/command-line-interface#--fix).

❌ This rule is deprecated.

📝 Description for no-foo.

❗ This rule identifies problems that could cause errors or unexpected behavior.

<!-- end auto-generated rule header -->
"
`;

exports[`generate (--rule-doc-notices) > for md files > hasSuggestions only (without fixable) using fixableAndHasSuggestions notice > shows only hasSuggestions notice 1`] = `
"# test/no-foo

💡 This rule is manually fixable by [editor suggestions](https://eslint.org/docs/latest/use/core-concepts#rule-suggestions).

<!-- end auto-generated rule header -->
"
`;

exports[`generate (--rule-doc-notices) > for mdx files > basic > shows description before other notices when using default notice ordering 1`] = `
"# test/no-foo

📝 Description for no-foo.

❌ This rule is deprecated.

🔧💡 This rule is automatically fixable by the [\`--fix\` CLI option](https://eslint.org/docs/latest/user-guide/command-line-interface#--fix) and manually fixable by [editor suggestions](https://eslint.org/docs/latest/use/core-concepts#rule-suggestions).

{/* end auto-generated rule header */}
"
`;

exports[`generate (--rule-doc-notices) > for mdx files > basic > shows the right rule doc notices 1`] = `
"# test/no-foo

💡 This rule is manually fixable by [editor suggestions](https://eslint.org/docs/latest/use/core-concepts#rule-suggestions).

🔧 This rule is automatically fixable by the [\`--fix\` CLI option](https://eslint.org/docs/latest/user-guide/command-line-interface#--fix).

❌ This rule is deprecated.

📝 Description for no-foo.

❗ This rule identifies problems that could cause errors or unexpected behavior.

{/* end auto-generated rule header */}
"
`;

exports[`generate (--rule-doc-notices) > for mdx files > hasSuggestions only (without fixable) using fixableAndHasSuggestions notice > shows only hasSuggestions notice 1`] = `
"# test/no-foo

💡 This rule is manually fixable by [editor suggestions](https://eslint.org/docs/latest/use/core-concepts#rule-suggestions).

{/* end auto-generated rule header */}
"
`;
